--- a/exercises/beatBoxJS/index.html
+++ b/exercises/beatBoxJS/index.html
@@ -1,45 +1,65 @@
 <!DOCTYPE html>
 <head>
+	<link rel="shortcut icon" href="#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BeatBoxJS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+	 <link rel="stylesheet" 
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/c939d0e917.js" crossorigin="anonymous"></script>
+    </head>
+<body class="text-center">
+	<main>
+		<h1 class="banner p-3 text-primary"><b><span style="color: #6624a8;"><i>KingzOfCode<br>
+        <span style="color: #6624a8;">
+        <a href="https://www.instagram.com/KingzOfCode/" target="_blank"><span style="color: #6624a8;"><i class="fab fa-instagram-square"></a></i>
+        <!--<i class="fab fa-instagram-square"></i> href="https://www.instagram.com/KingzOfCode/"-->
+        <a href="https://www.twitter.com/KingzOfCode/" target="_blank"><span style="color: #6624a8;"><i class="fab fa-twitter-square"></a></i>
+        <!--<i class="fab fa-twitter-square"></i> href="https://www.twitter.com/KingzOfCode/"-->
+        <a href="https://www.facebook.com/KingzOfCode/" target="_blank"><span style="color: #6624a8;"><i class="fab fa-facebook-square"></a></i>
+        <!--<i class="fab fa-facebook-square"></i> href="https://www.facebook.com/KingzOfCode/"-->
+        <span style="color: #fbc100fd;"
+        class="banner p-3"><br>BeatBox</h1>
+	
     <div class="container">
         <div class="beatbox">
             <div class="beat">
-                <div id="65" class="button">A</div>
+                <div id="65" class="button"><span style= 'color: #fbc100fd;'>7</div> 
             </div>
             <div class="beat">
-                <div id="83" class="button">S</div>
+                <div id="83" class="button"><span style= 'color: #fbc100fd;'>8</div>
             </div>
             <div class="beat">
-                <div id="68" class="button">D</div>
+                <div id="68" class="button"><span style= 'color: #fbc100fd;'>9</div>
             </div>
             <div class="beat">
-                <div id="70" class="button">F</div>
+                <div id="70" class="button"><span style= 'color: #fbc100fd;'>4</div>
             </div>
             <div class="beat">
-                <div id="71" class="button">G</div>
+                <div id="71" class="button"><span style= 'color: #fbc100fd;'>5</div>
             </div>
             <div class="beat">
-                <div id="72" class="button">H</div>
+                <div id="72" class="button"><span style= 'color: #fbc100fd;'>6</div>
             </div>
             <div class="beat">
-                <div id="74" class="button">J</div>
+                <div id="74" class="button"><span style= 'color: #fbc100fd;'>1</div>
             </div>
             <div class="beat">
-                <div id="75" class="button">K</div>
+                <div id="75" class="button"><span style= 'color: #fbc100fd;'>2</div>
             </div>
             <div class="beat">
-                <div id="76" class="button">L</div>
+                <div id="76" class="button"><span style= 'color: #fbc100fd;'>3</div>
             </div>
         </div>
     </div>
-    <script src="./utils.js"></script>
-    <script src="./script.js" ></script>
+	<script src="./utils.js"></script>
+	<script src="./script.js" ></script>
+	<a href="https://www.cleverprogrammer.com/pwj" target="_blank">
+    <center><img src="1500x500.jpeg" alt="CleverProgrammer, ProfitWithJavaScript"
+	  width="650" height="325"></center>
+	  </main>
 </body>
 </html>
